@@ -16,7 +16,6 @@ define(function (require) {
     var Soul              = require("ethon/soul"),
         inherit           = require("ethon/inherit"),
         proxy             = require("ethon/proxy"),
-        renderAssistant   = require("ethon/render_assistant"),
         Sprite;
 
     /**
@@ -33,6 +32,7 @@ define(function (require) {
         this.texture = texture;
         this.width = this.texture.width;
         this.height = this.texture.height;
+        this.rotation = 0;
         this.animations = {};
         this.currentAnimation = null;
         this.currentAnimationIndex = 0;
@@ -71,16 +71,26 @@ define(function (require) {
      *
      * @method render
      */
-    Sprite.prototype.render = function () {
-        var position = this.getPosition(),
+    Sprite.prototype.render = function (renderAssistant) {
+        var ctx = renderAssistant.getContext(),
+            position = this.getPosition(),
             currentFrame;
+
+        ctx.save();
+        ctx.translate(this.position.x, this.position.y);
+
+        ctx.translate(this.width / 2, this.height / 2);
+        ctx.rotate(this.rotation * (Math.PI / 180));
+        ctx.translate(-this.width / 2, -this.height / 2);
 
         if (this.currentAnimation !== null && this.animations[this.currentAnimation].length > 0) {
             currentFrame = this.animations[this.currentAnimation][this.currentAnimationIndex];
-            renderAssistant.drawSubImage(position.x, position.y, this.texture, currentFrame.frame, this.width, this.height);
+            renderAssistant.drawSubImage(0, 0, this.texture, currentFrame.frame, this.width, this.height);
         } else {
-            renderAssistant.drawImage(position.x, position.y, this.texture);
+            renderAssistant.drawImage(0, 0, this.texture);
         }
+
+        ctx.restore();
     };
 
     /**
